<resources>
    <string name="app_name">SUN</string>
    <string name="home">Home</string>
    <string name="learn">Learn</string>
    <string name="learn_symbols">Learn Symbols</string>
    <string name="learn_symbols_completed">Learn Symbols Completed!</string>
    <string name="test">Test</string>
    <string name="test_symbols">Test Symbols</string>
    <string name="test_symbols_completed">Test Symbols Completed!</string>
    <string name="lessons">Lessons</string>
    <string name="learn_sentences">Learn Sentences</string>
    <string name="learn_sentences_completed">Learn Sentences Completed!</string>
    <string name="test_sentences">Test Sentences</string>
    <string name="test_sentences_completed">Test Sentences Completed</string>
    <string name="lesson_completed">Lesson %1$d Completed!</string>
    <string name="lesson_name">Lesson %1$d</string>
    <string name="unknown" translatable="false">example</string>
    <string name="sun_example_sentence" translatable="false">\uE000\uE000\uE000\uE000</string>
    <string name="sun_example_symbol" translatable="false">\uE000</string>
    <string name="tally_example" translatable="false">5</string>
    <string name="number_example" translatable="false">20</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="progress">Progress</string>
    <string name="track_progress">Track Progress</string>
    <string name="test_knowledge">Test Knowledge</string>
    <string name="symbols_learned">Symbols Learned</string>
    <string name="lessons_learned">Lessons Learned</string>
    <string name="test_score">Test Score</string>
    <string name="start_now">Start Now</string>
    <string name="see_answer">See Answer</string>
    <string name="hide_answer">Hide Answer</string>
    <string name="test_symbols_hint">Choose the symbol that reflects the image</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
</resources>