<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.activity.GlobalTestActivity">

    <include android:id="@+id/top_nav_bar" layout="@layout/top_navigation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_40dp"
        android:paddingHorizontal="@dimen/_20dp">

        <LinearLayout
            android:id="@+id/test_knowledge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/selector_knowledge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_knowledge"
                android:layout_marginStart="@dimen/_20dp"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/selector_lesson_text"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/selector_symbols_test"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_symbols"
                android:layout_marginStart="@dimen/_20dp"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/selector_lesson_text"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_sentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/selector_test_sentences"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_sentences"
                android:layout_marginStart="@dimen/_20dp"
                android:textSize="@dimen/_24sp"
                android:textColor="@color/selector_lesson_text"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>