<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wajahatkarim3.easyflipview.EasyFlipView
        android:id="@+id/card_view_flip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:flipFrom="right"
        app:flipType="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/flash_card_bg"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_write"
                android:id="@+id/item_image"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:padding="@dimen/_4dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hide_answer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:text="@string/hide_answer"
                app:icon="@drawable/ic_eye_closed"
                app:iconPadding="@dimen/_12dp"
                app:iconGravity="textStart"
                app:iconSize="@dimen/_30dp"
                app:strokeColor="@color/primary"
                app:cornerRadius="@dimen/_8dp"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/_40dp"
                android:layout_marginVertical="@dimen/_10dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/flash_card_bg">

            <TextView
                android:id="@+id/item_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sun_example_symbol"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="@dimen/_280sp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:fontFamily="@font/sun" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_answer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:text="@string/see_answer"
                app:icon="@drawable/ic_eye_open"
                app:iconPadding="@dimen/_12dp"
                app:iconGravity="textStart"
                app:iconSize="@dimen/_30dp"
                app:strokeColor="@color/primary"
                app:cornerRadius="@dimen/_8dp"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/_40dp"
                android:layout_marginVertical="@dimen/_10dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </LinearLayout>

    </com.wajahatkarim3.easyflipview.EasyFlipView>
</FrameLayout>