<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.activity.LearnSentencesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp">

        <ImageView
            android:layout_width="@dimen/_60dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_10dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_20dp">

        <ImageView
            android:layout_width="@dimen/_60dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_learn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn_symbols"
                android:textSize="24sp"
                android:textStyle="bold"
                android:elevation="1dp"
                android:textColor="@color/primary"
                android:id="@+id/page_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson_name"
                    android:textSize="@dimen/_16sp"
                    android:elevation="1dp"
                    android:id="@+id/lesson_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tally_example"
                    android:textSize="@dimen/_16sp"
                    android:elevation="1dp"
                    android:fontFamily="@font/tally"
                    android:layout_marginStart="@dimen/_10dp"
                    android:id="@+id/lesson_tally" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_40dp" >

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_20dp"/>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabs"
            app:tabBackground="@drawable/selector_dot"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMaxWidth="@dimen/_25dp"
            app:tabTextColor="@color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/prev_button"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_50dp"
                app:icon="@drawable/ic_arrow_back"
                app:iconPadding="0dp"
                app:iconGravity="textStart"
                android:layout_marginStart="@dimen/_16dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_50dp"
                app:icon="@drawable/ic_arrow_right"
                app:iconPadding="0dp"
                app:iconGravity="textStart"
                android:layout_marginEnd="@dimen/_16dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>